<?xml version="1.0" encoding="utf-8"?>
<TableLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:stretchColumns="2">

    <TableRow>
        <Button
            android:id="@+id/button_red"
            android:text="@string/red"
            android:textColor="@android:color/holo_red_light"/>
        <Button
            android:id="@+id/button_white"
            android:text="@string/white"
            android:textColor="@android:color/white"/>
        <Button
            android:id="@+id/button_blue"
            android:text="@string/blue"
            android:textColor="@android:color/holo_blue_light"
            />
    </TableRow>

    <TextView
        android:id="@+id/tv_content"
        android:background="@android:color/white"
        android:layout_height="@dimen/sp_20"/>

    <TableRow>
        <Button
            android:id="@+id/button_clear"
            android:layout_column="2"
            android:text="@string/clear"/>
    </TableRow>
</TableLayout>
