<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        >

        <RadioGroup
            android:id="@+id/rgColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rbRed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/red"
                />

            <RadioButton
                android:id="@+id/rbWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/white"
                android:checked="true"
                />

            <RadioButton
                android:id="@+id/rbBlue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blue"
                />

        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="right"
        >

        <Button
            android:id="@+id/button_set_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_color"
            />

        <Button
            android:id="@+id/button_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear"
            />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/happy_new_year"
        android:textSize="@dimen/sp_20"
        android:layout_gravity="center"
        android:textColor="@android:color/white"
        android:gravity="center"
        />
</LinearLayout>
